updated milestone-2 & stylesheet

--- a/public_html/documentation/style.css
+++ b/public_html/documentation/style.css
@@ -1,5 +1,5 @@
 #banner {
-    background-image: url("../documentation/woodwork.jpg");
+    background-image: url("woodwork.jpg");
     height: 400px;
     width: 100%;
     background-size: cover;
