--- a/public_html/documentation/style.css
+++ b/public_html/documentation/style.css
@@ -23,6 +23,10 @@ head, body, footer {
     top: 40%
 }
 
+#bold {
+    font-weight: bold;
+}
+
 #words {
     color: #ffffff;
 }
@@ -51,11 +55,6 @@ head, body, footer {
     width: 300px;
 }
 
-.captions {
-    text-align: center;
-    margin-top: 15px;
-}
-
 .carousel {
     margin: 50px auto;
     padding: 0 10px;
@@ -71,14 +70,12 @@ head, body, footer {
 
 #gallery-row{
     margin: 15px;
-    /*max-height: 250px;*/
 }
 
 .each-pic {
     margin-bottom: 15px;
     border: 5px ridge #237539;
 }
-
 
 .icons {
     color: #237539;
