deleted pictures>img and fixed margins for lightbox gallery

--- a/public_html/documentation/style.css
+++ b/public_html/documentation/style.css
@@ -69,11 +69,13 @@ span {
 }
 
 .gallery-row{
-    margin: 15px;
+    margin:auto;
+
 }
 
 .each-pic {
-    margin-bottom: 15px;
+    margin-bottom:15px;
+    margin-top:15px;
     border: 5px ridge #237539;
 }
 
